--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,19 @@
         android:theme="@style/Theme.TravelHotel"
         tools:targetApi="31">
         <activity
+            android:name=".Hotel.HomeHotel"
+            android:exported="false"
+            android:label="@string/title_activity_home_hotel"
+            android:theme="@style/Theme.TravelHotel.NoActionBar" />
+        <activity
+            android:name=".Hotel.HotelHome"
+            android:exported="false"
+            android:label="@string/title_activity_hotel_home" />
+        <activity
             android:name=".Customer.HomeFragment"
             android:exported="false" />
         <activity
             android:name=".Customer.CustomerLogin"
-            android:exported="false" />
-        <activity
-            android:name=".Hotel.HotelHome"
             android:exported="false" />
         <activity
             android:name=".Hotel.HotelLogin"
