--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,18 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelHotel"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
             android:name=".Hotel.HotelHome"
-            android:exported="false"
-            android:label="@string/title_activity_hotel_home" />
+            android:exported="false" />
         <activity
-            android:name=".Hotel.HomeHotel"
-            android:exported="false"
-            android:label="@string/title_activity_home_hotel"
-            android:theme="@style/Theme.TravelHotel.NoActionBar" />
-        <activity
-            android:name=".Customer.HomeFragment"
+            android:name=".Customer.HomeTabFragment"
             android:exported="false" />
         <activity
             android:name=".Customer.CustomerLogin"
@@ -31,17 +25,11 @@
             android:name=".Hotel.HotelLogin"
             android:exported="false" />
         <activity
-            android:name=".Customer.CutomerLogin"
-            android:exported="false" />
-        <activity
-            android:name=".Hotel.Hotel_Home"
-            android:exported="false" />
-        <activity
             android:name=".Customer.CustomerHome"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
